--- a/practica 4 html.html
+++ b/practica 4 html.html
@@ -18,7 +18,7 @@
   </ul>
   <ol>
     <li><a href="url">Coffee</a></li>
-    <li>Tea<a href="url">Tea</a></li>
+    <li><a href="url">Tea</a></li>
     <li><a href="url">Milk</a></li>
   </ol>
 </body>
