--- a/practica 4 html.html
+++ b/practica 4 html.html
@@ -7,19 +7,22 @@
 
 <h1>Lenguajes de Marcas</h1><!--Usamos h1 para escribir el título principal, porque es el tamañop más grande -->
 
-<h2>Elementos básicos de HTML5</h2><!--Usamos el h2 para subtítulos, ya que es un tamaño pequeño -->
+<h2>Elementos Basicos de HTML5</h2><!--Usamos el h2 para subtítulos, ya que es un tamaño pequeño -->
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aliquam, incidunt fugiat repellat accusantium autem eaque, fuga amet expedita quasi quaerat provident officiis itaque error! Praesentium repellendus minus reiciendis eum.</p>
-<img src="html5.jpg" alt="html5 logo">
-<ul>
-    <li>html</li>
-    <li>html5</li>
-    <li>json</li>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aliquam, incidunt fugiat repellat accusantium autem eaque, fuga amet expedita quasi quaerat provident officiis itaque error! Praesentium repellendus minus reiciendis eum.</p><!-- En esta parte se encuentra el cuerpo del párrafo -->
+
+<img src="html5.jpg" alt="html5 logo"><!-- Con esta comanda se puede agregar la imagen a la página HTML -->
+
+<ul><!-- En esta parte se realiza una lista no numerada con la comanda li -->
+
+    <li>HTML</li>
+    <li>HTML5</li>
+    <li>JSON</li>
   </ul>
-  <ol>
-    <li><a href="url">Coffee</a></li>
-    <li><a href="url">Tea</a></li>
-    <li><a href="url">Milk</a></li>
+  <ol><!-- Y por último realizamos la lista numerada con enlaces -->
+    <li><a href="url">HTML</a></li>
+    <li><a href="url">HTML5</a></li>
+    <li><a href="url">JSON</a></li>
   </ol>
 </body>
 </html>
